feat(middleware): Added api middleware
* Added RequireSession middleware to prevent unauthorized api calls
* Added DTO user and task models
* Validated contexes

--- a/views/changepassword.html
+++ b/views/changepassword.html
@@ -47,7 +47,7 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form onsubmit="login(this); return false;">
+  <form onsubmit="updatePassword(this); return false;">
     <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
     <h1 class="h3 mb-3 fw-normal">Change Password</h1>
     <p>Choose a strong password and don't reuse it for other accounts.</p>
@@ -63,6 +63,7 @@
       <input type="password" class="form-control" id="floatingConfirmNewPassword" placeholder="Password" required>
       <label for="floatingPassword">Confirm new password</label>
     </div>
+    <p id="updatePasswordStatus"> </p>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Confirm</button>
     <br></br>
     <p>Changed your mind? <a href="/">Dashboard</a></p>
@@ -74,14 +75,14 @@
 
 
 function updatePassword(param) { 
-  var oldPassword = document.getElementById('oldPasswordUserInput').value; 
-  var newPassword = document.getElementById('newPasswordUserInput').value; 
-  var confirmNewPassword = document.getElementById('confirmNewPasswordUserInput').value; 
+  var oldPassword = document.getElementById('floatingOldPassword').value; 
+  var newPassword = document.getElementById('floatingNewPassword').value; 
+  var confirmNewPassword = document.getElementById('floatingConfirmNewPassword').value; 
   if (newPassword != confirmNewPassword) { 
     document.getElementById('updatePasswordStatus').innerHTML = "Passwords don't match."
     return
   }
-  fetch('auth/resetPassword/', {
+  fetch('/auth/resetPassword/', {
   method: 'PATCH',
   headers: {
       "Content-Type" : "application/json"
@@ -102,10 +103,9 @@ function updatePassword(param) {
             return Promise.reject(error);
         }
         document.getElementById('updatePasswordStatus').innerHTML = "Password sucessfully updated."
-        document.getElementById('oldPasswordUserInput').value = ""; 
-        document.getElementById('newPasswordUserInput').value = ""; 
-        document.getElementById('confirmNewPasswordUserInput').value = ""; 
-        console.log(data);
+        document.getElementById('floatingOldPassword').value = ""; 
+        document.getElementById('floatingNewPassword').value = ""; 
+        document.getElementById('floatingConfirmNewPassword').value = ""; 
     })
     .catch(error => {
       if (error == 409) {
