--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -86,9 +86,9 @@
             <div class="col-md-12">
                 <div class="card px-3">
                     <div class="card-body">
-                        <h4 class="card-title">{{ .User.Firstname }}'s Todo list</h4>
+                        <h4 class="card-title">{{ .User.FirstName }}'s Todo list</h4>
                         <div class="add-items d-flex">
-                           <input type="text" class="form-control todo-list-input" id="taskName" placeholder="e.g., Review design docs">
+                           <input type="text" class="form-control todo-list-input" id="title" placeholder="e.g., Review design docs">
                            <input type="text" class="form-control todo-list-input" id="assignee" placeholder="Assignee (optional)">
                            <button onclick="createTask()" class="add btn btn-primary font-weight-bold todo-list-add-btn">Add</button> 
                         </div>
@@ -128,7 +128,7 @@ window.onclick = function(event) {
 
   // Show tasks in a list format
   function showTasks(param) {
-    fetch("api/tasks", {
+    fetch("/api/tasks", {
   method: "GET",
   headers: {
       "Content-Type" : "application/json"
@@ -137,13 +137,12 @@ window.onclick = function(event) {
 })
 .then(response => response.json())
 .then(json => {
-  console.log(json)
     document.getElementById("myUl").innerHTML = "";
     json.data.forEach(function(item) {
       // var li = document.createElement("li");
       // var li = createCard(item);
       var li = createTodo(item); 
-      // var text = document.createTextNode("Task name: " + item.TaskName + ", Assignee: " + item.Assignee + ", Is done: " + "false");
+      // var text = document.createTextNode("Task name: " + item.title + ", Assignee: " + item.Assignee + ", Is done: " + "false");
       li.setAttribute('id', item.ID)
       // li.setAttribute('onclick','deleteTask(this);');
       // li.appendChild(text);
@@ -161,7 +160,7 @@ function createTodo(param) {
   label = document.createElement('label'); 
   label.className = 'form-check-label';
   label.type = 'text';
-  label.textContent = param.Assignee == "" ? param.TaskName : param.TaskName + " Assigned to " + param.Assignee;
+  label.textContent = param.assignee == "" ? param.title : param.title + " assigned to " + param.assignee;
   if (param.isDone) label.style = "text-decoration: line-through;";
 
   input = document.createElement('input'); 
@@ -193,7 +192,6 @@ let i3 = document.createElement('i');
   i3.textContent = 'edit';
   i3.style = "position:absolute; right: 85px;";
   i3.onclick = function() {
-    console.log(param);
     editTask(param);
 };
 
@@ -209,15 +207,13 @@ function toggleIsDone(param) {
 }
 
 function updateTask(param) { 
-  console.log(param);
-  fetch('api/tasks/' + param.id, {
+  fetch('/api/tasks/' + param.id, {
   method: 'PATCH',
   headers: {
       "Content-Type" : "application/json"
     },
-    body: JSON.stringify({ID: param.ID, TaskName: param.TaskName, Assignee: param.Assignee, IsDone: param.isDone})
+    body: JSON.stringify({id: param.id, title: param.title, assignee: param.assignee, isDone: param.isDone})
   }).then(response => {
-    console.log(response);
     showTasks();
   }).catch(e => {
     console.log(e);
@@ -226,7 +222,7 @@ function updateTask(param) {
 
 
 // <div class="add-items d-flex">
-//                            <input type="text" class="form-control todo-list-input" id="taskName" placeholder="e.g., Review design docs">
+//                            <input type="text" class="form-control todo-list-input" id="title" placeholder="e.g., Review design docs">
 //                            <input type="text" class="form-control todo-list-input" id="assignee" placeholder="Assignee (optional)">
 //                            <button onclick="createTask()" class="add btn btn-primary font-weight-bold todo-list-add-btn">Add</button> 
 //                         </div>
@@ -237,21 +233,21 @@ function editTask(param) {
   let input = document.createElement('input'); 
   input.type = "text"; 
   input.className = "form-control todo-list-input"; 
-  input.id = "editTaskName"; 
+  input.id = "editTitle"; 
   input.placeholder = "e.g., Review design docs"; 
-  input.value = param.TaskName;
+  input.value = param.title;
 
   let input2 = document.createElement('input'); 
   input2.type = "text"; 
   input2.className = "form-control todo-list-input"; 
   input2.id = "editAssignee"; 
   input2.placeholder ="Assignee (optional)";
-  input2.value = param.Assignee;
+  input2.value = param.assignee;
 
   let button = document.createElement('button'); 
   button.className = "add btn btn-primary font-weight-bold todo-list-add-btn"; 
   button.onclick = function() {
-    updateTask({ID: param.ID, TaskName:input.value, Assignee:input2.value, IsDone: param.isDone});
+    updateTask({id: param.id, title:input.value, assignee:input2.value, isDone: param.isDone});
   }
   button.textContent = "Save";
 
@@ -273,14 +269,13 @@ function editTask(param) {
 }
 
 function deleteTask(param) { 
-  fetch('api/tasks/' + param.ID, {
+  fetch('/api/tasks/' + param.id, {
   method: 'DELETE',
   headers: {
       "Content-Type" : "application/json"
     },
   body: null
   }).then(response => {
-    console.log(response);
     showTasks();
   }).catch(e => {
     console.log(e);
@@ -289,20 +284,18 @@ function deleteTask(param) {
 
 // Creates task in database 
 function createTask() {
-  console.log('here');
-  var TaskName = document.getElementById('taskName').value;
+  var Title = document.getElementById('title').value;
   var Assignee = document.getElementById('assignee').value;
-  fetch('api/tasks/', {
+  fetch('/api/tasks/', {
   method: 'POST',
   headers: {
     'Accept': 'application/json, text/plain, */*',
     'Content-Type': 'application/json'
   },
-  body: JSON.stringify({TaskName: TaskName, Assignee: Assignee})
+  body: JSON.stringify({Title: Title, Assignee: Assignee})
 }).then(response => {
-    console.log(response);
     showTasks();
-    document.getElementById('taskName').value = ""; 
+    document.getElementById('title').value = ""; 
     document.getElementById('assignee').value = ""; 
 }).catch(e => {
     console.log(e);
@@ -341,7 +334,6 @@ function updatePassword(param) {
         document.getElementById('oldPasswordUserInput').value = ""; 
         document.getElementById('newPasswordUserInput').value = ""; 
         document.getElementById('confirmNewPasswordUserInput').value = ""; 
-        console.log(data);
     })
     .catch(error => {
       if (error == 409) {
@@ -355,13 +347,12 @@ function updatePassword(param) {
 }
 
 function logout()  {
-  fetch('auth/logout/', {
+  fetch('/auth/logout/', {
   method: 'POST',
   headers: {
       "Content-Type" : "application/json"
     },
 }).then(response => {
-    console.log(response);
     window.location.href = '/';
 }).catch(e => {
     console.log(e);
